
v0.1
----
- initial release
- added disable tool wear
- added disable weapon wear