@@ -1,3 +1,2 @@
 
 TODO:
-- add disable armor wear
