@@ -5,3 +5,6 @@ tool_wear (Enable tool wear) bool true
 
 # Enables/Disables wear for weapons.
 weapon_wear (Enable weapon wear) bool true
+
+# Enables/Disables wear for armor.
+armor_wear (Enable armor wear) bool true
