@@ -4,3 +4,4 @@ v0.1
 - initial release
 - added disable tool wear
 - added disable weapon wear
+- added disable armor wear
